# ITK_tutorial

./: .gitignore  CMakeLists.txt  README.md
src/: example_first.cpp  example_itkvtkdicom.cpp
